tests/ui/static_ref.stderr
error[E0597]: `gil` does not live long enough
 --> tests/ui/static_ref.rs:4:1
  |
4 | #[pyfunction]
  | ^^^^^^^^^^^^-
  | |           |
  | |           `gil` dropped here while still borrowed
  | borrowed value does not live long enough
  | cast requires that `gil` is borrowed for `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
